--- a/ARMdps/Views/Shared/_Layout.cshtml
+++ b/ARMdps/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" ></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/jquery.dataTables.min.js"></script>
+    <script src="~/js/jquery.maskedinput.min.js"></script>
     <script src="~/js/toastr.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
