--- a/ARMdps/wwwroot/css/site.css
+++ b/ARMdps/wwwroot/css/site.css
@@ -69,6 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*Верхняя часть приложения*/
+
 .blue-header {
     font-family: 'Roboto';
     font-style: normal;
@@ -78,6 +81,9 @@ body {
     color: #FFFFFF;
     width:100%;
 }
+
+/**/
+
 .main-button {
     background-color:#FFFFFF;
     border: 1px groove;
@@ -90,24 +96,31 @@ body {
     border-radius: 6px;
     color: #044C6A;
     height: 100%;
-    width: inherit;
+    width: 100%;
     left: 0px;
     top: 0px;
     border-radius: 6px;
     margin: 2% 2% 2% 2%;
     padding: 2% 2% 2% 2%;
+    position:inherit;
 }
 button:focus,
 button:active{
     background-color: white;
     border:hidden;
 }
+
+/**/
+
 .main_container {
     display: flex;
     margin: 2% 2% 2% 2%;
     padding: 1% 2% 1% 2%;
     width:95%;
 }
+
+/**/
+
 .main_menus {
     display: flex;
     width:30%;
@@ -115,14 +128,23 @@ button:active{
     justify-content: space-around;
     padding: 1% 5% 1% 5%;
 }
+
+/**/
+
 .button_div{
     width:100%;
     padding:2% 2% 2% 2%;
 }
+
+/**/
+
 .drop_button{
-    width:95%;
+    width:fit-content;
     border-radius: 6px;
 }
+
+/**/
+
 .region_head {
     background-color: #75BCFF;
     border-radius: 6px 6px 0px 0px;
@@ -134,12 +156,18 @@ button:active{
     line-height: 18px;
     padding: 10px 10px 3px 10px;
 }
+
+/**/
+
 .region_div {
     background: #FFFFFF;
     box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
     width:90%;
 }
+
+/**/
+
 .region_table {
     font-family: 'Roboto';
     font-style: normal;
@@ -149,6 +177,9 @@ button:active{
     color: #044C6A;
     width:95%;
 }
+
+/**/
+
 .region_h {
     border-bottom: 1px solid #75BCFF;
     font-family: 'Roboto';
@@ -158,6 +189,9 @@ button:active{
     line-height: 17px;
     color: #75BCFF;
 }
+
+/**/
+
 .form_button {
     font-family: 'Roboto';
     font-style: normal;
@@ -168,45 +202,73 @@ button:active{
     border-radius: 6px;
     border: hidden;
 }
+
+/**/
+
 .button:active {
     background-color: white;
     border: hidden;
 }
+
+/**/
+
 .input_border {
-    border-radius:6px 0px 0px 6px; 
+    border-radius:6px 6px 6px 6px; 
     border-right:none;
     box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
-    padding-right:0px;
-    margin-right:0px;
-    width:90%;
+    padding: 1px 2px 2px 1px;
+    margin-right:15px;
+    width:85%;
 }
 
-.input_span {
+/**/
+
+.checkbox_border {
+    border: 1px solid #A3B1C6;
+    border-radius: 6px;
+}
+
+/**/
+
+.input_span {     
     border-radius: 0px 6px 6px 0px;
     border-left:none;
     border-color:black;
     box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.25);
-    padding:1px 0px 1px 2px;
-    margin:0px;
-    width: 10px;
+    padding: 1px 2px 2px 1px;
+    margin-left:-30px;
+    width: 15px;
 }
 
+/**/
 
 .validFail {
-    border: 1px solid red;
-    border-right:none;
+    border: 1px solid #FF3E3E;
+    border-right: none;
+    color: #FF3E3E;
 }
 
+/**/
+
 .validSpanFail {
+    position: absolute;
     border: 1px solid red;
-    border-left:none;
+    border-left: none;
+    color: #FF3E3E;
 }
+
+/**/
+
 .validMsg{
+    position:absolute;
     display:none;
 }
+
+/**/
+
 .validMsgFail {
-    display: block;
-    background-color: orangered;
-    width: 90%;
-    border-radius: 6px 0px 0px 6px;
+    background-color: #FF3E3E;
+    width: inherit;
+    padding: 5px;
+    border-radius: 6px 6px 6px 6px;
 }
